improve the json tag in the openapi
